<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ScrollingActivity"
    tools:showIn="@layout/activity_scrolling"
    android:backgroundTint="@color/white">

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?attr/actionBarSize"
        android:orientation="vertical">
        
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_padding_min"
            android:clickable="true"
            android:focusable="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/common_padding_min">
                
                <ImageView
                    android:id="@+id/img_card"
                    android:layout_width="@dimen/card_img_size"
                    android:layout_height="@dimen/card_img_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@mipmap/ic_launcher"
                    android:contentDescription="@string/card_view_image"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_buy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img_card"
                    app:icon="@drawable/ic_add_shopping_cart"
                    android:text="@string/button_buy"
                    style="@style/Widget.Material3.Button"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_show_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@id/btn_buy"
                    app:layout_constraintTop_toBottomOf="@id/img_card"
                    android:text="@string/button_show_image"
                    style="@style/Widget.Material3.Button.TextButton"
                    />
                <ImageView
                    android:id="@+id/icon_love_it"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_thumb_up"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:visibility="invisible"
                    android:contentDescription="@string/icon_love_it" />
                <CheckBox
                    android:id="@+id/icon_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/sl_favorite"
                    android:buttonTint="@color/pink"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_padding_min"
            >

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_bacardi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_bacardi_text"
                android:padding="@dimen/common_padding_min"
                android:checkable="true"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_coco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_aguita_de_coco_text"
                android:padding="@dimen/common_padding_min"
                android:checkable="true"
                />
        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/tv_bacardi"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:text="@string/bacacha_options_text"
            android:layout_margin="@dimen/common_padding_min"
            android:backgroundTint="@color/pink"
            />
        <TextView
            android:id="@+id/tv_coco"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:text="@string/coco_options_text"
            android:layout_margin="@dimen/common_padding_min"
            android:backgroundTint="@color/teal_200"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_love_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_padding_min"
            android:text="@string/btn_love_it"
            app:icon="@drawable/ic_thumb_up"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/url_input"
            app:helperText="@string/url_helper_text"
            app:errorEnabled="true"
            android:layout_margin="@dimen/common_padding_min"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:helperText="@string/url_helper_text"
            android:hint="@string/et_password"
            android:layout_margin="@dimen/common_padding_min"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>